--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="menu">
       <main>
         <h1>CAMPER CAFE</h1>
-        <p>Est. 2020</p>
+        <p class="established">Est. 2020</p>
         <section>
           <h2>Coffee</h2>
           <article class="item">
@@ -33,20 +33,21 @@
           <h2>Desserts</h2>
           <article class="item">
             <p class="dessert">Donut</p><p class="price">1.50</p>
-            <article class="item">
-                <p class="dessert">Donut</p><p class="price">1.50</p>
-              </article>
-              <article class="item">
-                <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
-              </article>
-              <article class="item">
-                <p class="dessert">Cheesecake</p><p class="price">3.00</p>
-              </article>
-              <article class="item">
-                <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
-              </article>
+          </article>
+          <article class="item">
+            <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+          </article>
         </section>
       </main>
+      <footer>
+        <p><a href="https://www.freecodecamp.org"> Visit our website</a></p>
+      </footer>
     </div>
   </body>
 </html>
